# project-medusa

./: README.md  thesis.md
project-medusa/medusa-cli/: .coveragerc  .dockerignore  .env.example  .gitignore  API_SERVER_README.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  INSTALLATION.md  INTEGRATION_GUIDE.md  INTERACTIVE_SHELL_GUIDE.md  LICENSE  MANIFEST.in  MANUAL_TEST_REPORT.md  MULTI_AGENT_TEST_REPORT.md  PROJECT_OVERVIEW.md  QUICKSTART.md  QUICK_START_CHECKPOINTING.md  QUICK_START_LLM.md  README.md  SQLMAP_NIKTO_INTEGRATION.md  STRUCTURE_GUIDE.md  TEST_RESULTS_SUMMARY.md  TOOLS_STATUS_REPORT.md  TOOL_VERIFICATION_REPORT.md  USAGE_EXAMPLES.md  WATCHDOG_GUIDE.md  WATCHDOG_IMPLEMENTATION_SUMMARY.md  api_server.py  config.example.yaml  config.fly.yaml  config.yaml  coverage.json  docker-compose.agent.yml  docker-compose.api.yml  entrypoint.sh  fly.toml  medusa.py  medusa_assessment_report.txt  (+18 more)
project-medusa/medusa-cli/checkpoints/: auto_20251202_181437.json
project-medusa/medusa-cli/docs/multi-agent/: API_REFERENCE.md  ARCHITECTURE.md  AWS_BEDROCK_SETUP.md  USER_GUIDE.md
project-medusa/medusa-cli/examples/: json_parsing_demo.py  reporting_demo.py  tool_registry_example.py
project-medusa/medusa-cli/medusa_extracted_data/: employee_credentials.json  medical_identity_data.json
project-medusa/medusa-cli/scripts/: index_cves.py  index_mitre_attack.py  index_tool_docs.py
project-medusa/medusa-cli/sessions/: session_20251107_083758.json  session_20251107_142601.json
project-medusa/medusa-cli/src/agents/: __init__.py  ai_agent.py
project-medusa/medusa-cli/src/config/: config.yaml
project-medusa/medusa-cli/src/core/: __init__.py
project-medusa/medusa-cli/src/medusa/: __init__.py  approval.py  checkpoint.py  cli.py  cli_multi_agent.py  cli_ux_enhancements.py  client.py  command_parser.py  completers.py  config.py  display.py  docker_client.py  error_handler.py  exporters.py  feedback_analyzer.py  first_run.py  reporter.py  session.py
project-medusa/medusa-cli/src/medusa/agents/: __init__.py  base_agent.py  data_models.py  exploitation_agent.py  graph_nodes.py  message_bus.py  orchestrator_agent.py  planning_agent.py  reconnaissance_agent.py  reporting_agent.py  vulnerability_analysis_agent.py
project-medusa/medusa-cli/src/medusa/api/: QUICKSTART.md  README.md  __init__.py  graph_api.py
project-medusa/medusa-cli/src/medusa/commands/: graph_run.py  setup_wizard.py
project-medusa/medusa-cli/src/medusa/context/: __init__.py  fusion_engine.py  hybrid_retrieval.py  rag_optimizer.py  reranker.py  vector_store.py
project-medusa/medusa-cli/src/medusa/core/: README_CHECKPOINTING.md  __init__.py  approval_node.py  checkpointer.py  config_validator.py  cost_tracker.py  dependencies.py  errors.py  feedback.py  graph_state.py  llm.py  llm.py.gemini_backup  medusa_graph.py  objective_parser.py  operation_manager.py  prompts.py  strategy_selector.py  supervisor.py  tool_adapter.py  tool_registry.py  watchdog.py
project-medusa/medusa-cli/src/medusa/display/: progress.py
project-medusa/medusa-cli/src/medusa/exploits/: __init__.py  msf_connector.py  session_manager.py
project-medusa/medusa-cli/src/medusa/modes/: __init__.py  autonomous.py  interactive.py  observe.py
project-medusa/medusa-cli/src/medusa/reporting/: __init__.py  exporters.py  interactive_report.py  report_generator.py
project-medusa/medusa-cli/src/medusa/safety/: __init__.py  audit_logger.py  authorization.py  rollback.py  scope_validator.py
project-medusa/medusa-cli/src/medusa/setup/: __init__.py  auto_detect.py  profiles.py  validator.py  wizard.py
project-medusa/medusa-cli/src/medusa/templates/: executive_summary.html  report.md  technical_report.html
project-medusa/medusa-cli/src/medusa/tools/: __init__.py  amass.py  base.py  graph_integration.py  httpx_scanner.py  kerbrute.py  metasploit.py  nmap.py  sql_injection.py  web_scanner.py  web_vuln.py
project-medusa/medusa-cli/src/modules/: __init__.py
project-medusa/medusa-cli/templates/: config.default.yaml
project-medusa/medusa-cli/tests/: PERFORMANCE_GUIDE.md  README.md  __init__.py  conftest.py  test_interrupt_before_exploitation.py  test_llm_json_parsing.py  test_tool_registry.py  verify_imports.py
project-medusa/medusa-cli/tests/api/: __init__.py  test_graph_api.py
project-medusa/medusa-cli/tests/e2e/: __init__.py  test_autonomous_mode.py
project-medusa/medusa-cli/tests/fixtures/: __init__.py  mock_responses.json  mock_scan_results.json  sample_config.yaml
project-medusa/medusa-cli/tests/integration/: __init__.py  test_cli_multi_agent.py  test_client_real_tools.py  test_graph_e2e.py  test_interactive_mode.py  test_lab_connectivity.py  test_llm_integration.py  test_llm_response_parsing.py  test_local_llm_integration.py  test_multi_agent_integration.py  test_new_reconnaissance_tools.py  test_nikto_integration.py  test_nmap_integration.py  test_observe_mode.py  test_observe_mode_e2e.py  test_sqlmap_integration.py  test_vulnerability_scanning.py  test_web_scanner_integration.py
project-medusa/medusa-cli/tests/performance/: __init__.py  test_benchmarks.py
project-medusa/medusa-cli/tests/security/: __init__.py  test_input_validation.py
project-medusa/medusa-cli/tests/unit/: __init__.py  test_approval.py  test_autonomous_mode.py  test_bedrock_provider.py  test_cli_llm_verify.py  test_command_parser.py  test_config.py  test_cost_tracker.py  test_llm.py  test_local_llm.py  test_model_router.py  test_reporter.py  test_session.py  test_setup.py  test_vector_store.py
(+704 files in other folders)
