[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medusa-pentest"
version = "1.0.0"
description = "AI-powered autonomous penetration testing CLI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Project Medusa Team", email = "security@medusa.dev"}
]
keywords = ["security", "penetration-testing", "ai", "red-team"]
dependencies = [
    "typer[all]>=0.20.0",
    "click>=8.0.0",  # Required for typer 0.20.0+ compatibility
    "rich>=12.0.0,<14.0.0",
    "prompt-toolkit>=3.0.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0.1",
    "google-generativeai>=0.3.2",
    "jinja2>=3.1.3",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=24.1.1",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[project.scripts]
medusa = "medusa.cli:app"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

